# pagemark

./: .gitignore  AGENTS.md  BUGS.md  README.md  demo_curtsies.py  demo_fixed_width.py  demo_page_breaks.py  demo_page_numbers.py  example_page_output.txt  hatch_build.py  main.py  pyproject.toml  test_document.txt
build_tools/: write_build_info.py
docs/: font-selection-refactoring.md
pagemark/: __init__.py  __main__.py  autosave.py  clipboard.py  commands.py  constants.py  editor.py  editor_wrapper.py  font_config.py  keyboard.py  main.py  model.py  pdf_generator.py  postscript.py  print_dialog.py  print_formatter.py  print_output.py  print_preview.py  printer_utils.py  rtf_parser.py  session.py  settings_persistence.py  terminal.py  textual_app.py  undo.py  version.py  view.py
tests/: terminal_harness.py  test_arrow_down_bug.py  test_arrow_navigation.py  test_arrow_scroll.py  test_atomic_saving.py  test_autosave.py  test_backward_kill_word.py  test_bold_bug_reproduction.py  test_bold_in_bullets.py  test_bold_rendering_page2.py  test_bold_second_page.py  test_center_line.py  test_ctrl_c_handling.py  test_cursor_boundary.py  test_cut_selection_bug.py  test_delete_char.py  test_emdash_rendering.py  test_empty_document.py  test_fixed_width.py  test_font_config.py  test_hanging_indent.py  test_help_screen.py  test_home_end_navigation.py  test_incremental_search.py  test_integration_full_line.py  test_keyboard.py  test_kill_line.py  test_line_movement.py  test_long_document_scrolling.py  test_model_insertion.py  test_multi_paragraph_overflow.py  test_nbsp_bullet.py  (+31 more)
