[project]
name = "pagemark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "blessed>=1.21.0",
    "curtsies @ git+https://github.com/ljosa/curtsies@bug-shift-right-python-3-9",
]

[project.scripts]
pagemark = "pagemark.__main__:main"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
artifacts = [
  "pagemark/_build_info.py",
]
